--- a/portfoliosite/Index.html
+++ b/portfoliosite/Index.html
@@ -35,7 +35,7 @@
       
       <h1 style="text-align: center;">Establish User Requirements</h1>
       <p>With the UX methodology in place, we must establish more specific principles and insights for the application's purpose, the best way to do this is to just ask the end user, since this is a game vendor platform, the end user would be PC gamers. Luckily, Steam also has community functionality which made collecting user opinions relatively easy, I wrote a Google Forms survey and just posted it in Steam Discussions, usually, a digital survey has issues with bias and poor control but these were non-issues because Steam users are technical enough to access the survey AND Google Forms provides features to prevent abuse or duplication of the survey.</p>
-      <p>Yes, its in Portuguese, sorry, its my Google account language.</p>
+      <p>It is in Portuguese, sorry, its my Google account language.</p>
       <img src="assets/survey1.png" title="survey1"</img> 
       <p>I asked some questions about a user's preferences within the site, though the most insightful responses came from questions that asked for either positive or negative feedback from the Store and Library, whilst many of the 44 responses were not too helpful, some were kind enough to go very in-depth in explaining their thoughts which helped shape the design in a positive direction. It also meant that I didn't have to dirty my hands with personal information, all it requires from a respondent is a Google account (which most PC users would have) and that information can be set to be anonymous to the survey owner (me).</p>
 
