--- a/portfoliosite/Index.html
+++ b/portfoliosite/Index.html
@@ -7,7 +7,7 @@
     </head>
   <body>
     <div style="width: 30%; margin-left: 30%; padding: 5%; background-color: white;">
-      <img style="clip-path: circle(); margin-left: 12%;" src="assets/me.png" title="me"</img> 
+      <img style="clip-path: circle(); margin-left: 12%;width: 75%;margin-top: -25%;margin-bottom: -10%;" src="assets/me.png" title="me"</img> 
       
       <h1 style="text-align: center;">Me</h1>
       <p>My name is Pedro Ferreira and am a student at my local college, I seek to learn as many things as I possibly can, aiming to be a generalist so that when the need for specialisation comes, I can easily rise to the occasion.</p>
